--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,6 +15,16 @@ img {
   width: 100%;
 }
 
+//variables
+$introDarkBlue: hsl(217, 28%, 15%);
+$mainDarkBlue: hsl(218, 28%, 13%);
+$footerDarkBlue: hsl(216, 53%, 9%);
+$testimonialDarkBlue: hsl(219, 30%, 18%);
+
+$accentCyan: hsl(176, 68%, 64%);
+$accentBlue: hsl(198, 60%, 50%);
+$white: hsl(0, 0%, 100%);
+
 body {
   font-family: 'Raleway', sans-serif;
 }
