--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,14 @@ html {
 
 body {
   font-family: 'Raleway', sans-serif;
-  font-size: 1rem; }
+  font-size: 1.6rem;
+  background: url(/images/bg-curvy-desktop.svg) no-repeat center center;
+  background-size: cover;
+  background-color: #1c2431;
+  color: white; }
+
+.intro-image {
+  width: 50%; }
 
 .attribution {
   font-size: 11px;
