--- a/scss/main.scss
+++ b/scss/main.scss
@@ -67,7 +67,15 @@ html {
 
 body {
   font-family: 'Raleway', sans-serif;
-  font-size: 1rem;
+  font-size: 1.6rem;
+  background: url(/images/bg-curvy-desktop.svg) no-repeat center center;
+  background-size: cover;
+  background-color: $introDarkBlue;
+  color: $white;
+}
+
+.intro-image {
+  width: 50%;
 }
 
 .attribution {
