--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,155 @@ body {
   background-color: #1c2431;
   color: white; }
 
+.header {
+  height: 7rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 5rem; }
+
+.header-menu {
+  display: flex; }
+
+.menu-item {
+  list-style: none; }
+  .menu-item:not(:last-child) {
+    margin-right: 3rem; }
+
+.content-container {
+  width: 90%;
+  margin: auto; }
+
+.logo {
+  width: 12rem; }
+
+.hero-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5rem; }
+
 .intro-image {
   width: 50%; }
+
+.intro-title {
+  width: 50%;
+  text-align: center;
+  margin-bottom: 2rem; }
+
+.intro-text {
+  width: 40%;
+  text-align: center;
+  margin-bottom: 2rem; }
+
+.intro-button {
+  padding: 1.5rem 7rem;
+  border-radius: 50px;
+  border: none;
+  background-color: #65e2d9;
+  color: white; }
+
+.boxes {
+  width: 70%;
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  justify-items: center;
+  margin: auto;
+  margin-bottom: 10rem; }
+
+.box {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
+.box-icon {
+  width: 20%; }
+
+.split-panel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10rem; }
+
+.left {
+  flex: 1; }
+
+.right {
+  flex: 1; }
+
+.row {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 15rem; }
+
+.testimonial-box {
+  width: 30%;
+  background-color: #202a3c;
+  padding: 3rem 2rem; }
+  .testimonial-box:not(:last-child) {
+    margin-right: 2rem; }
+
+.testimonial-text {
+  margin-bottom: 2rem; }
+
+.profile-image {
+  width: 5rem;
+  border-radius: 100px;
+  margin-right: 2rem; }
+
+.user-info {
+  display: flex; }
+
+.info-container {
+  width: 70%;
+  background-color: #202a3c;
+  margin: auto;
+  padding: 3rem;
+  text-align: center;
+  position: relative;
+  bottom: -10rem; }
+
+.action-heading {
+  margin-bottom: 2rem; }
+
+.action-text {
+  margin-bottom: 2rem; }
+
+.action-input {
+  width: 400px;
+  margin-right: 3rem;
+  height: 4.5rem;
+  border-radius: 100px;
+  border: none; }
+
+.footer {
+  background-color: #0b1523;
+  padding-top: 12rem; }
+
+.icon {
+  width: 2rem; }
+
+.footer-content {
+  display: flex; }
+
+.footer-text {
+  flex: 2; }
+
+.footer-contact {
+  flex: 2; }
+
+.footer-info {
+  flex: 1; }
+
+.footer-general {
+  flex: 1; }
+
+.footer-social {
+  flex: 2; }
 
 .attribution {
   font-size: 11px;
