--- a/scss/main.scss
+++ b/scss/main.scss
@@ -75,11 +75,11 @@ body {
 }
 
 .header {
-  height: 7rem;
+  height: 17rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 5rem;
+  margin-bottom: 4rem;
 }
 
 .header-menu {
@@ -99,7 +99,7 @@ body {
 }
 
 .logo {
-  width: 12rem;
+  width: 16rem;
 }
 
 .hero-container {
@@ -107,30 +107,37 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 5rem;
+  margin-bottom: 15rem;
 }
 
 .intro-image {
-  width: 50%;
+  width: 55%;
+  margin-bottom: 4rem;
 }
 
 .intro-title {
-  width: 50%;
+  width: 60%;
   text-align: center;
-  margin-bottom: 2rem;
+  font-size: 4rem;
+  line-height: 1.6;
+  margin-bottom: 2.5rem;
 }
 
 .intro-text {
-  width: 40%;
+  width: 50%;
   text-align: center;
-  margin-bottom: 2rem;
+  margin-bottom: 4rem;
+  font-size: 2.1rem;
+  line-height: 1.4;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .intro-button {
-  padding: 1.5rem 7rem;
+  padding: 2rem 9rem;
   border-radius: 50px;
   border: none;
-  background-color: $accentCyan;
+  font-size: 2.1rem;
+  background-color: $accentBlue;
   color: $white;
 }
 
@@ -141,7 +148,8 @@ body {
   grid-template-columns: repeat(2, 1fr);
   justify-items: center;
   margin: auto;
-  margin-bottom: 10rem;
+  margin-bottom: 11rem;
+  row-gap: 10rem;
 
   @include respond(phone) {
     display: block;
@@ -149,7 +157,7 @@ body {
 }
 
 .box {
-  width: 70%;
+  width: 80%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -157,14 +165,22 @@ body {
 }
 
 .box-icon {
-  width: 20%;
+  width: 28%;
+  margin-bottom: 2rem;
+}
+.box-title {
+  margin-bottom: 1.5rem;
+}
+
+.box-text {
+  text-align: center;
 }
 
 .split-panel {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 10rem;
+  margin-bottom: 12rem;
 
   @include respond(phone) {
     display: block;
@@ -179,10 +195,36 @@ body {
   flex: 1;
 }
 
+.productive-title {
+  font-size: 4.2rem;
+  width: 60%;
+  margin-bottom: 2rem;
+}
+
+.productive-text {
+  font-size: 1.8rem;
+  width: 90%;
+  margin-bottom: 2rem;
+}
+
+.see-how {
+  color: $accentBlue;
+  text-decoration: none;
+  border-bottom: 1px solid $accentBlue;
+  padding-bottom: 0.8rem;
+}
+
+.icon-arrow {
+  width: 25px;
+}
+
 .row {
   display: flex;
   justify-content: center;
-  margin-bottom: 15rem;
+  margin-bottom: 10rem;
+
+  background: url(/images/bg-quotes.png) no-repeat;
+  padding-top: 4rem;
 
   @include respond(phone) {
     display: block;
@@ -191,10 +233,11 @@ body {
 .testimonial-box {
   width: 30%;
   background-color: $testimonialDarkBlue;
-  padding: 3rem 2rem;
+  padding: 4rem 2rem 3rem 2rem;
+  font-family: 'Open Sans', sans-serif;
 
   &:not(:last-child) {
-    margin-right: 2rem;
+    margin-right: 4rem;
   }
 
   @include respond(phone) {
@@ -203,39 +246,55 @@ body {
 }
 
 .testimonial-text {
+  font-size: 1.7;
+
   margin-bottom: 2rem;
 }
 .profile-image {
-  width: 5rem;
+  width: 2.8rem;
+  height: 2.8rem;
   border-radius: 100px;
   margin-right: 2rem;
 }
 
+.profile-name {
+  font-weight: 600;
+  font-size: 1.4rem;
+}
+
+.profile-title {
+  font-size: 1.2rem;
+}
+
 .user-info {
   display: flex;
+  align-items: center;
 }
 
 .info-container {
   width: 70%;
   background-color: $testimonialDarkBlue;
   margin: auto;
-  padding: 3rem;
+  padding: 4rem 3rem;
   text-align: center;
   position: relative;
   bottom: -10rem;
 }
 
 .action-heading {
-  margin-bottom: 2rem;
+  font-size: 3.2rem;
+  margin-bottom: 2.4rem;
 }
 
 .action-text {
-  margin-bottom: 2rem;
+  margin-bottom: 3.4rem;
+  font-size: 1.7rem;
+  font-family: 'Open Sans', sans-serif;
 }
 .action-input {
   width: 400px;
   margin-right: 3rem;
-  height: 4.5rem;
+  height: 4.2rem;
   border-radius: 100px;
   border: none;
 
@@ -244,23 +303,43 @@ body {
   }
 }
 
+.action-button {
+  padding: 1.5rem 4rem;
+  border-radius: 50px;
+  border: none;
+  font-size: 1.5rem;
+  background-color: $accentBlue;
+  color: $white;
+}
+
 .footer {
   background-color: $footerDarkBlue;
-  padding-top: 12rem;
+  padding-top: 19rem;
   padding-bottom: 7rem;
 }
 
 .icon {
   width: 2rem;
-  margin-right: 1rem;
+  height: 2rem;
+  margin-right: 2rem;
+}
+
+.footer-text {
+  display: flex;
+}
+
+.footer-logo {
+  margin-bottom: 3rem;
+}
+
+.footer-container {
+  width: 85%;
+  margin: auto;
 }
 
 .footer-content {
   display: flex;
-  width: 90%;
-  margin: auto;
-  justify-content: center;
-  align-items: center;
+
   padding: 1rem;
 
   @include respond(phone) {
@@ -270,6 +349,8 @@ body {
 
 .footer-text {
   flex: 2;
+  font-family: 'Open Sans', sans-serif;
+  margin-right: 3rem;
 }
 
 .footer-contact {
@@ -286,11 +367,17 @@ body {
   list-style: none;
 }
 .footer-social {
-  flex: 2;
+  flex: 1;
+}
+
+li {
+  margin-bottom: 1rem;
+  font-size: 1.9rem;
+  font-weight: 600;
 }
 
 ion-icon {
-  font-size: 45px;
+  font-size: 35px;
   color: #fff;
   margin-left: 1.5rem;
 
