--- a/scss/main.scss
+++ b/scss/main.scss
@@ -80,6 +80,10 @@ body {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 4rem;
+
+  @include respond(phone) {
+    height: 6rem;
+  }
 }
 
 .header-menu {
@@ -91,6 +95,12 @@ body {
   &:not(:last-child) {
     margin-right: 3rem;
   }
+
+  @include respond(phone) {
+    &:not(:last-child) {
+      margin-right: 1rem;
+    }
+  }
 }
 
 .content-container {
@@ -100,6 +110,10 @@ body {
 
 .logo {
   width: 16rem;
+
+  @include respond(phone) {
+    width: 11rem;
+  }
 }
 
 .hero-container {
@@ -108,11 +122,19 @@ body {
   justify-content: center;
   align-items: center;
   margin-bottom: 15rem;
+
+  @include respond(phone) {
+    margin-bottom: 14rem;
+  }
 }
 
 .intro-image {
   width: 55%;
   margin-bottom: 4rem;
+
+  @include respond(phone) {
+    width: 75%;
+  }
 }
 
 .intro-title {
@@ -121,6 +143,13 @@ body {
   font-size: 4rem;
   line-height: 1.6;
   margin-bottom: 2.5rem;
+
+  @include respond(phone) {
+    width: 100%;
+    font-size: 3.1rem;
+    line-height: 1.4;
+    font-weight: 700;
+  }
 }
 
 .intro-text {
@@ -130,6 +159,15 @@ body {
   font-size: 2.1rem;
   line-height: 1.4;
   font-family: 'Open Sans', sans-serif;
+
+  @include respond(phone) {
+    width: 90%;
+    font-size: 1.7rem;
+    margin-bottom: 3rem;
+    // font-size: 3rem;
+    // line-height: 1.3;
+    // font-weight: 700;
+  }
 }
 
 .intro-button {
@@ -142,7 +180,7 @@ body {
 }
 
 .boxes {
-  width: 70%;
+  width: 90%;
   display: grid;
   grid-template-rows: repeat(2, 1fr);
   grid-template-columns: repeat(2, 1fr);
@@ -153,20 +191,30 @@ body {
 
   @include respond(phone) {
     display: block;
+    margin-bottom: 22rem;
   }
 }
 
 .box {
-  width: 80%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  @include respond(phone) {
+    margin-bottom: 11rem;
+  }
 }
 
 .box-icon {
   width: 28%;
   margin-bottom: 2rem;
+
+  @include respond(phone) {
+    width: 18%;
+    margin-bottom: 3rem;
+  }
 }
 .box-title {
   margin-bottom: 1.5rem;
@@ -189,22 +237,46 @@ body {
 
 .left {
   flex: 1;
+  @include respond(phone) {
+    flex: none;
+    width: 85%;
+    margin: auto;
+  }
 }
 
 .right {
   flex: 1;
+  @include respond(phone) {
+    flex: none;
+  }
+}
+
+.stay-productive {
+  @include respond(phone) {
+    margin-bottom: 3.8rem;
+  }
 }
 
 .productive-title {
   font-size: 4.2rem;
   width: 60%;
   margin-bottom: 2rem;
+
+  @include respond(phone) {
+    width: 100%;
+    font-size: 2.4rem;
+  }
 }
 
 .productive-text {
   font-size: 1.8rem;
   width: 90%;
   margin-bottom: 2rem;
+
+  @include respond(phone) {
+    width: 100%;
+    // font-size: 2.4rem;
+  }
 }
 
 .see-how {
@@ -228,6 +300,8 @@ body {
 
   @include respond(phone) {
     display: block;
+    background-size: 30px 20px;
+    margin-bottom: 9rem;
   }
 }
 .testimonial-box {
@@ -241,29 +315,50 @@ body {
   }
 
   @include respond(phone) {
-    width: 90%;
+    width: 80%;
+    margin: auto;
+    margin-bottom: 3rem;
+    padding: 3rem 1.5rem 2rem 1.5rem;
   }
 }
 
 .testimonial-text {
-  font-size: 1.7;
+  font-size: 1.7rem;
 
   margin-bottom: 2rem;
+
+  @include respond(phone) {
+    font-size: 1.3rem;
+    font-weight: 100;
+    line-height: 1.7;
+  }
 }
 .profile-image {
   width: 2.8rem;
   height: 2.8rem;
   border-radius: 100px;
   margin-right: 2rem;
+
+  @include respond(phone) {
+    width: 2.4rem;
+    height: 2.4rem;
+  }
 }
 
 .profile-name {
   font-weight: 600;
   font-size: 1.4rem;
+
+  @include respond(phone) {
+    font-size: 1.2rem;
+  }
 }
 
 .profile-title {
   font-size: 1.2rem;
+  @include respond(phone) {
+    font-size: 1rem;
+  }
 }
 
 .user-info {
@@ -279,11 +374,19 @@ body {
   text-align: center;
   position: relative;
   bottom: -10rem;
+
+  @include respond(phone) {
+    width: 90%;
+  }
 }
 
 .action-heading {
   font-size: 3.2rem;
   margin-bottom: 2.4rem;
+
+  @include respond(phone) {
+    font-size: 2.4rem;
+  }
 }
 
 .action-text {
@@ -299,7 +402,8 @@ body {
   border: none;
 
   @include respond(phone) {
-    width: 80%;
+    width: 100%;
+    margin-bottom: 2rem;
   }
 }
 
@@ -310,6 +414,10 @@ body {
   font-size: 1.5rem;
   background-color: $accentBlue;
   color: $white;
+
+  @include respond(phone) {
+    width: 100%;
+  }
 }
 
 .footer {
@@ -330,6 +438,10 @@ body {
 
 .footer-logo {
   margin-bottom: 3rem;
+
+  @include respond(phone) {
+    width: 20rem;
+  }
 }
 
 .footer-container {
@@ -351,6 +463,11 @@ body {
   flex: 2;
   font-family: 'Open Sans', sans-serif;
   margin-right: 3rem;
+
+  @include respond(phone) {
+    margin-bottom: 3rem;
+    font-size: 1.9rem;
+  }
 }
 
 .footer-contact {
@@ -368,12 +485,26 @@ body {
 }
 .footer-social {
   flex: 1;
+  @include respond(phone) {
+    flex: none;
+    text-align: center;
+  }
+}
+
+ul {
+  @include respond(phone) {
+    margin-bottom: 7rem;
+  }
 }
 
 li {
   margin-bottom: 1rem;
   font-size: 1.9rem;
   font-weight: 600;
+
+  @include respond(phone) {
+    margin-bottom: 2rem;
+  }
 }
 
 ion-icon {
@@ -384,11 +515,19 @@ ion-icon {
   &:not(:last-of-type) {
     margin-left: 1.5rem;
   }
+
+  @include respond(phone) {
+    font-size: 25px;
+  }
 }
 
 .attribution {
   font-size: 11px;
   text-align: center;
+
+  @include respond(phone) {
+    display: none;
+  }
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
