--- a/scss/main.scss
+++ b/scss/main.scss
@@ -68,8 +68,8 @@ html {
 body {
   font-family: 'Raleway', sans-serif;
   font-size: 1.6rem;
-  background: url(/images/bg-curvy-desktop.svg) no-repeat center center;
-  background-size: cover;
+  background: url(/images/bg-curvy-desktop.svg) no-repeat 70% 79%;
+  background-size: 350% 74%;
   background-color: $introDarkBlue;
   color: $white;
 }
@@ -88,17 +88,19 @@ body {
 
 .header-menu {
   display: flex;
-}
 
-.menu-item {
-  list-style: none;
-  &:not(:last-child) {
-    margin-right: 3rem;
-  }
+  &__menu-item {
+    list-style: none;
 
-  @include respond(phone) {
     &:not(:last-child) {
-      margin-right: 1rem;
+      margin-right: 3rem;
+    }
+
+    @include respond(phone) {
+      font-size: 1.4rem;
+      &:not(:last-child) {
+        margin-right: 1rem;
+      }
     }
   }
 }
@@ -126,57 +128,54 @@ body {
   @include respond(phone) {
     margin-bottom: 14rem;
   }
-}
 
-.intro-image {
-  width: 55%;
-  margin-bottom: 4rem;
+  &__intro-image {
+    width: 55%;
+    margin-bottom: 4rem;
 
-  @include respond(phone) {
-    width: 75%;
+    @include respond(phone) {
+      width: 75%;
+    }
   }
-}
 
-.intro-title {
-  width: 60%;
-  text-align: center;
-  font-size: 4rem;
-  line-height: 1.6;
-  margin-bottom: 2.5rem;
+  &__intro-title {
+    width: 60%;
+    text-align: center;
+    font-size: 4rem;
+    line-height: 1.6;
+    margin-bottom: 2.5rem;
 
-  @include respond(phone) {
-    width: 100%;
-    font-size: 3.1rem;
+    @include respond(phone) {
+      width: 100%;
+      font-size: 3.1rem;
+      line-height: 1.4;
+      font-weight: 700;
+    }
+  }
+
+  &__intro-text {
+    width: 50%;
+    text-align: center;
+    margin-bottom: 4rem;
+    font-size: 2.1rem;
     line-height: 1.4;
-    font-weight: 700;
+    font-family: 'Open Sans', sans-serif;
+
+    @include respond(phone) {
+      width: 90%;
+      font-size: 1.7rem;
+      margin-bottom: 3rem;
+    }
   }
-}
 
-.intro-text {
-  width: 50%;
-  text-align: center;
-  margin-bottom: 4rem;
-  font-size: 2.1rem;
-  line-height: 1.4;
-  font-family: 'Open Sans', sans-serif;
-
-  @include respond(phone) {
-    width: 90%;
-    font-size: 1.7rem;
-    margin-bottom: 3rem;
-    // font-size: 3rem;
-    // line-height: 1.3;
-    // font-weight: 700;
+  &__intro-button {
+    padding: 2rem 9rem;
+    border-radius: 50px;
+    border: none;
+    font-size: 2.1rem;
+    background-color: $accentBlue;
+    color: $white;
   }
-}
-
-.intro-button {
-  padding: 2rem 9rem;
-  border-radius: 50px;
-  border: none;
-  font-size: 2.1rem;
-  background-color: $accentBlue;
-  color: $white;
 }
 
 .boxes {
@@ -205,23 +204,34 @@ body {
   @include respond(phone) {
     margin-bottom: 11rem;
   }
-}
 
-.box-icon {
-  width: 28%;
-  margin-bottom: 2rem;
+  &__icon {
+    width: 12rem;
+    height: 13rem;
+    margin-bottom: 2rem;
 
-  @include respond(phone) {
-    width: 18%;
-    margin-bottom: 3rem;
+    @include respond(phone) {
+      margin-bottom: 3rem;
+    }
+  }
+
+  &__title {
+    margin-bottom: 1.5rem;
+
+    @include respond(phone) {
+      text-align: center;
+    }
+  }
+
+  &__text {
+    font-family: 'Open Sans', sans-serif;
+    width: 80%;
+    text-align: center;
   }
 }
-.box-title {
-  margin-bottom: 1.5rem;
-}
 
-.box-text {
-  text-align: center;
+.wide-icon {
+  width: 15rem;
 }
 
 .split-panel {
@@ -242,6 +252,12 @@ body {
     width: 85%;
     margin: auto;
   }
+
+  &__stay-productive {
+    @include respond(phone) {
+      margin-bottom: 3.8rem;
+    }
+  }
 }
 
 .right {
@@ -249,45 +265,41 @@ body {
   @include respond(phone) {
     flex: none;
   }
-}
 
-.stay-productive {
-  @include respond(phone) {
-    margin-bottom: 3.8rem;
+  &__.productive-title {
+    font-size: 4.2rem;
+    width: 60%;
+    margin-bottom: 2rem;
+
+    @include respond(phone) {
+      width: 100%;
+      font-size: 2.4rem;
+    }
   }
-}
 
-.productive-title {
-  font-size: 4.2rem;
-  width: 60%;
-  margin-bottom: 2rem;
+  &__productive-text {
+    font-size: 1.8rem;
+    width: 90%;
+    margin-bottom: 2rem;
 
-  @include respond(phone) {
-    width: 100%;
-    font-size: 2.4rem;
+    @include respond(phone) {
+      width: 100%;
+      // font-size: 2.4rem;
+    }
   }
-}
 
-.productive-text {
-  font-size: 1.8rem;
-  width: 90%;
-  margin-bottom: 2rem;
-
-  @include respond(phone) {
-    width: 100%;
-    // font-size: 2.4rem;
+  &__see-how {
+    color: $accentBlue;
+    text-decoration: none;
+    border-bottom: 1px solid $accentBlue;
+    padding-bottom: 0.8rem;
   }
-}
-
-.see-how {
-  color: $accentBlue;
-  text-decoration: none;
-  border-bottom: 1px solid $accentBlue;
-  padding-bottom: 0.8rem;
 }
 
 .icon-arrow {
   width: 25px;
+  position: relative;
+  top: 8px;
 }
 
 .row {
@@ -301,6 +313,7 @@ body {
   @include respond(phone) {
     display: block;
     background-size: 30px 20px;
+    background-position: 13% 2%;
     margin-bottom: 9rem;
   }
 }
@@ -333,40 +346,40 @@ body {
     line-height: 1.7;
   }
 }
-.profile-image {
-  width: 2.8rem;
-  height: 2.8rem;
-  border-radius: 100px;
-  margin-right: 2rem;
-
-  @include respond(phone) {
-    width: 2.4rem;
-    height: 2.4rem;
-  }
-}
-
-.profile-name {
-  font-weight: 600;
-  font-size: 1.4rem;
-
-  @include respond(phone) {
-    font-size: 1.2rem;
-  }
-}
-
-.profile-title {
-  font-size: 1.2rem;
-  @include respond(phone) {
-    font-size: 1rem;
-  }
-}
 
 .user-info {
   display: flex;
   align-items: center;
+
+  &__image {
+    width: 2.8rem;
+    height: 2.8rem;
+    border-radius: 100px;
+    margin-right: 2rem;
+
+    @include respond(phone) {
+      width: 2.4rem;
+      height: 2.4rem;
+    }
+  }
+
+  &__name {
+    font-weight: 600;
+    font-size: 1.4rem;
+
+    @include respond(phone) {
+      font-size: 1.2rem;
+    }
+  }
+  &__title {
+    font-size: 1.2rem;
+    @include respond(phone) {
+      font-size: 1rem;
+    }
+  }
 }
 
-.info-container {
+.action {
   width: 70%;
   background-color: $testimonialDarkBlue;
   margin: auto;
@@ -378,45 +391,45 @@ body {
   @include respond(phone) {
     width: 90%;
   }
-}
 
-.action-heading {
-  font-size: 3.2rem;
-  margin-bottom: 2.4rem;
+  &__heading {
+    font-size: 3.2rem;
+    margin-bottom: 2.4rem;
 
-  @include respond(phone) {
-    font-size: 2.4rem;
+    @include respond(phone) {
+      font-size: 2.4rem;
+    }
   }
-}
 
-.action-text {
-  margin-bottom: 3.4rem;
-  font-size: 1.7rem;
-  font-family: 'Open Sans', sans-serif;
-}
-.action-input {
-  width: 400px;
-  margin-right: 3rem;
-  height: 4.2rem;
-  border-radius: 100px;
-  border: none;
-
-  @include respond(phone) {
-    width: 100%;
-    margin-bottom: 2rem;
+  &__text {
+    margin-bottom: 3.4rem;
+    font-size: 1.7rem;
+    font-family: 'Open Sans', sans-serif;
   }
-}
+  &__input {
+    width: 400px;
+    margin-right: 3rem;
+    height: 4.2rem;
+    border-radius: 100px;
+    border: none;
 
-.action-button {
-  padding: 1.5rem 4rem;
-  border-radius: 50px;
-  border: none;
-  font-size: 1.5rem;
-  background-color: $accentBlue;
-  color: $white;
+    @include respond(phone) {
+      width: 100%;
+      margin-bottom: 2rem;
+    }
+  }
 
-  @include respond(phone) {
-    width: 100%;
+  &__button {
+    padding: 1.5rem 4rem;
+    border-radius: 50px;
+    border: none;
+    font-size: 1.5rem;
+    background-color: $accentBlue;
+    color: $white;
+
+    @include respond(phone) {
+      width: 100%;
+    }
   }
 }
 
@@ -424,87 +437,90 @@ body {
   background-color: $footerDarkBlue;
   padding-top: 19rem;
   padding-bottom: 7rem;
+  color: $white;
+
+  &__text {
+    display: flex;
+  }
+
+  &__logo {
+    margin-bottom: 3rem;
+
+    @include respond(phone) {
+      width: 20rem;
+    }
+  }
+
+  &__container {
+    width: 85%;
+    margin: auto;
+  }
+
+  &__content {
+    display: flex;
+
+    padding: 1rem;
+
+    @include respond(phone) {
+      display: block;
+    }
+  }
+
+  &__text {
+    flex: 2;
+    font-family: 'Open Sans', sans-serif;
+    margin-right: 3rem;
+
+    @include respond(phone) {
+      margin-bottom: 3rem;
+      font-size: 1.9rem;
+    }
+  }
+
+  &__contact {
+    flex: 2;
+    list-style: none;
+  }
+
+  &__info {
+    flex: 1;
+    list-style: none;
+
+    @include respond(phone) {
+      margin-bottom: 7rem;
+    }
+  }
+  &__general {
+    flex: 1;
+    list-style: none;
+
+    @include respond(phone) {
+      margin-bottom: 7rem;
+    }
+  }
+  &__social {
+    flex: 1;
+    @include respond(phone) {
+      flex: none;
+      text-align: center;
+    }
+  }
+
+  &__item {
+    margin-bottom: 1rem;
+    font-size: 1.9rem;
+    font-weight: 600;
+
+    @include respond(phone) {
+      margin-bottom: 2rem;
+    }
+  }
 }
 
 .icon {
   width: 2rem;
   height: 2rem;
   margin-right: 2rem;
-}
-
-.footer-text {
-  display: flex;
-}
-
-.footer-logo {
-  margin-bottom: 3rem;
-
-  @include respond(phone) {
-    width: 20rem;
-  }
-}
-
-.footer-container {
-  width: 85%;
-  margin: auto;
-}
-
-.footer-content {
-  display: flex;
-
-  padding: 1rem;
-
-  @include respond(phone) {
-    display: block;
-  }
-}
-
-.footer-text {
-  flex: 2;
-  font-family: 'Open Sans', sans-serif;
-  margin-right: 3rem;
-
-  @include respond(phone) {
-    margin-bottom: 3rem;
-    font-size: 1.9rem;
-  }
-}
-
-.footer-contact {
-  flex: 2;
-  list-style: none;
-}
-
-.footer-info {
-  flex: 1;
-  list-style: none;
-}
-.footer-general {
-  flex: 1;
-  list-style: none;
-}
-.footer-social {
-  flex: 1;
-  @include respond(phone) {
-    flex: none;
-    text-align: center;
-  }
-}
-
-ul {
-  @include respond(phone) {
-    margin-bottom: 7rem;
-  }
-}
-
-li {
-  margin-bottom: 1rem;
-  font-size: 1.9rem;
-  font-weight: 600;
-
-  @include respond(phone) {
-    margin-bottom: 2rem;
-  }
 }
 
 ion-icon {
